WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212283
RELEASE_ASSERT() that InitializeWebKit2() is getting called on the main thread
https://bugs.webkit.org/show_bug.cgi?id=212283
Summary
RELEASE_ASSERT() that InitializeWebKit2() is getting called on the main thread
Chris Dumez
Reported
2020-05-22 15:17:46 PDT
RELEASE_ASSERT() that InitializeWebKit2() is getting called on the main thread, behind a linked-on-after check.
Attachments
Patch
(5.03 KB, patch)
2020-05-22 15:22 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-05-22 15:22:31 PDT
Created
attachment 400082
[details]
Patch
EWS
Comment 2
2020-05-22 16:21:32 PDT
Committed
r262087
: <
https://trac.webkit.org/changeset/262087
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400082
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-22 16:22:14 PDT
<
rdar://problem/63557886
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug