RELEASE_ASSERT() that InitializeWebKit2() is getting called on the main thread https://bugs.webkit.org/show_bug.cgi?id=212283

Reviewed by Alex Christensen.

Source/WebKit:

RELEASE_ASSERT() that InitializeWebKit2() is getting called on the main thread, behind
a linked-on-after check. In r217137, we tried to add a dispatch_sync() to the main thread to
work around the issue but it was a hack and it can cause deadlocks. It is best to force
developers to fix their code by crashing.

* Shared/Cocoa/WebKit2InitializeCocoa.mm:
(WebKit::runInitializationCode):
(WebKit::InitializeWebKit2):
* UIProcess/Cocoa/VersionChecks.h:

Source/WTF:

* wtf/spi/darwin/dyldSPI.h:


Canonical link: https://commits.webkit.org/225150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262087 268f45cc-cd09-0410-ab3c-d52691b4dbfc